--- a/Restly/about.html
+++ b/Restly/about.html
@@ -244,15 +244,22 @@
                     <div class="col-lg-6">
                         <div class="about-content pl-70 rpl-0 rpb-30 wow fadeInRight delay-0-2s">
                             <div class="section-title mb-35">
-                                <span class="sub-title">It Support For Business</span>
-                                <h2>Preparing for your success trusted source in IT services.</h2>
+                                <span class="sub-title">JD Computers, founded in 2021</span>
+                                <h2>has a remarkable reputation for providing exceptional, personalized, and genuine service.</h2>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-                            <ul class="list-style-three mt-15">
-                                <li>which means as the company ramps</li>
-                                <li>Available in 14.1-in. and 16-in. versions.</li>
-                                <li>The potential loss of the Touch Bar.</li>
-                                <li>High-speed USB 4.0.</li>
+                            <p>Our specialists are trained to give the fastest professional service in SYDNEY, and the majority of our repairs are completed on-site.
+                                We take care of our consumers by delivering personalized service and introducing them to new technology. JD Computers offers a wide range of computer repair services, from PC and laptop repairs to first-class commercial IT services.
+                                We can swiftly deliver great software installs, computer upgrades, hard drive diagnostics, and data management or transfer services thanks to our many years of expertise. You may also engage us for device setup and configuration, as well as computer and laptop maintenance.
+                                We believe on offering our clients with high-quality, timely services. We maintain our pricing lower than our rivals and provide a reasonable price for a skilled, flexible, and cheerful computer repair service. If your computer or gadget needs components, we'll always let you know ahead of time so there are no unpleasant surprises.</p>
+
+                                <div class="section-title">
+                                    <span class="sub-title">Our promise:</span>
+                                </div>
+                            <ul class="list-style-three">
+                                <li>Call-out and walk-in services.</li>
+                                <li>Local, friendly and educated technicians.</li>
+                                <li>Repair facility on the same-day.</li>
+                                <li>Guaranteed best prices!</li>
                             </ul>
                             <a href="about.html" class="theme-btn style-three mt-25">View details</a>
                         </div>
@@ -300,35 +307,47 @@
                 </div>
                 <div class="work-progress-inner-three">
                     <div class="row justify-content-center">
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-3 col-sm-6">
                             <div class="progress-item-two style-two wow fadeInUp delay-0-2s">
                                 <span class="progress-step">01</span>
                                 <div class="icon">
                                     <i class="flaticon flaticon-speech-bubble"></i>
                                 </div>
-                                <h3>Advertising and <br>Marketing</h3>
+                                <h3>Call-out and walk-in services</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="service-details.html" class="learn-more">Read More <i class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-3 col-sm-6">
                             <div class="progress-item-two style-two wow fadeInUp delay-0-4s">
                                 <span class="progress-step">02</span>
                                 <div class="icon">
                                     <i class="flaticon flaticon-vector"></i>
                                 </div>
-                                <h3>Web <br>Development</h3>
+                                <h3>Local, friendly and educated technicians</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="service-details.html" class="learn-more">Read More <i class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-3 col-sm-6">
                             <div class="progress-item-two style-two wow fadeInUp delay-0-6s no-border mb-0">
                                 <span class="progress-step">03</span>
                                 <div class="icon">
                                     <i class="flaticon flaticon-like-1"></i>
                                 </div>
-                                <h3>Mobile App <br>Development</h3>
+                                <h3>Repair facility on the same-day</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                <a href="service-details.html" class="learn-more">Read More <i class="fas fa-arrow-right"></i></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="progress-item-two style-two wow fadeInUp delay-0-6s no-border mb-0">
+                                <span class="progress-step">03</span>
+                                <div class="icon">
+                                    <i class="flaticon flaticon-like-1"></i>
+                                </div>
+                                <h3>Guaranteed best prices</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="service-details.html" class="learn-more">Read More <i class="fas fa-arrow-right"></i></a>
                             </div>
