--- a/Restly/about.html
+++ b/Restly/about.html
@@ -68,7 +68,7 @@
                     <div class="header-inner d-flex align-items-center">
                         <div class="logo-outer">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/images/logos/logo.png" alt="Logo" title="Logo"></a>
+                                <a href="index.html"><img src="assets/images/logos/16.png" alt="Logo" title="Logo" height="145px"></a>
                             </div>
                         </div>
 
