--- a/Restly/services.html
+++ b/Restly/services.html
@@ -237,8 +237,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-md-8 col-sm-10">
                         <div class="section-title text-center mb-35">
-                            <span class="sub-title">WHO WE ARE</span>
-                            <h2>We deal with the aspects of professional IT Services</h2>
+                            <span class="sub-title">Computer Running slow or not running at all?</span>
+                            <h2>Well look no further because we can take care of all your computer related issues.</h2>
                         </div>
                     </div>
                 </div>
@@ -249,8 +249,8 @@
                                 <i class="flaticon flaticon-art"></i>
                             </div>
                             <div class="feature-content">
-                                <h5>Data Center</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                                <h5>Data Recovery & Backup</h5>
+                                <p>We are all aware of the importance of data. Losing data, whether you're an individual or a business, is a huge calamity. If you've ever lost data by mistake, you understand how frustrating it can be.</p>
                                 <a href="service-details.html" class="learn-more">Read More <i class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
