update the text

--- a/Restly/about.html
+++ b/Restly/about.html
@@ -11,7 +11,9 @@
     />
 
     <!--====== Title ======-->
-    <title>Restly - IT Solutions & Technology HTML Template || About Us</title>
+    <title>
+      JDComputers- IT Solutions & Technology HTML Template || About Us
+    </title>
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
@@ -297,7 +299,9 @@
             <h1 class="page-title">About Us</h1>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Restly</a></li>
+                <li class="breadcrumb-item">
+                  <a href="index.html">JD Computers</a>
+                </li>
                 <li class="breadcrumb-item active">About</li>
               </ol>
             </nav>
@@ -902,7 +906,7 @@
                   ><i class="fab fa-pinterest-p"></i
                 ></a>
               </div>
-              <p>copyright 2022 Restly All Rights Reserved.</p>
+              <p>copyright 2022 JD Computers All Rights Reserved.</p>
             </div>
           </div>
         </div>
