--- a/Restly/index-onepage.html
+++ b/Restly/index-onepage.html
@@ -11,7 +11,9 @@
     />
 
     <!--====== Title ======-->
-    <title>Restly - IT Solutions & Technology HTML Template || Home One</title>
+    <title>
+      JDComputers- IT Solutions & Technology HTML Template || Home One
+    </title>
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
@@ -85,6 +87,7 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
+                      style="height: 150px; width: 150px"
                       src="assets/images/logos/logo.png"
                       alt="Logo"
                       title="Logo"
@@ -637,7 +640,7 @@
                   ><i class="fab fa-pinterest-p"></i
                 ></a>
               </div>
-              <p>copyright 2022 Restly All Rights Reserved.</p>
+              <p>copyright 2022 JD Computers All Rights Reserved.</p>
             </div>
           </div>
         </div>
