--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,9 @@
     />
 
     <!--====== Title ======-->
-    <title>Restly - IT Solutions & Technology HTML Template || Home One</title>
+    <title>
+      JDComputers- IT Solutions & Technology HTML Template || Home One
+    </title>
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
@@ -1016,7 +1018,7 @@
                   ><i class="fab fa-pinterest-p"></i
                 ></a>
               </div>
-              <p>copyright 2022 Restly All Rights Reserved.</p>
+              <p>copyright 2022 JD Computers All Rights Reserved.</p>
             </div>
           </div>
         </div>
