update home page

--- a/site/404.html
+++ b/site/404.html
@@ -59,7 +59,9 @@
                   <li>Call Us: <a href="callto:548978478">548978478</a></li>
                   <li>
                     Email us:
-                    <a href="mailto:demo@example.com">demo@example.com</a>
+                    <a href="mailto:jdcomputers@gmail.com"
+                      >jdcomputers@gmail.com</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -80,7 +82,7 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="assets/images/logos/logo.png"
+                      src="assets/images/logos/logo.svg"
                       alt="Logo"
                       title="Logo"
                   /></a>
@@ -94,7 +96,7 @@
                     <div class="mobile-logo py-15">
                       <a href="index.html">
                         <img
-                          src="assets/images/logos/logo.png"
+                          src="assets/images/logos/logo.svg"
                           alt="Logo"
                           title="Logo"
                         />
@@ -366,7 +368,7 @@
                 <div class="footer-widget about-widget">
                   <div class="footer-logo mb-35">
                     <a href="index.html"
-                      ><img src="assets/images/logos/logo.png" alt="Logo"
+                      ><img src="assets/images/logos/logo.svg" alt="Logo"
                     /></a>
                   </div>
                   <div class="text">
