--- a/site/about.html
+++ b/site/about.html
@@ -50,40 +50,48 @@
       </div>
 
       <!-- main header -->
-      <header class="main-header header-three text-white">
-        <div class="header-top-wrap bg-blue py-10">
-          <div class="container">
-            <div class="header-top">
-              <div class="top-left">
-                <ul>
-                  <li>Call Us: <a href="callto:548978478">548978478</a></li>
-                  <li>
-                    Email us:
-                    <a href="mailto:demo@example.com">demo@example.com</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="top-right">
-                <div class="office-time">
-                  <i class="far fa-clock"></i><span>08:00 am - 06:00 pm</span>
-                </div>
-              </div>
+      <header class="main-header header-one">
+        <div class="header-top bg-lighter py-10">
+          <div class="top-left">
+            <ul>
+              <li>Call Us: <a href="callto:548978478">548978478</a></li>
+              <li>
+                Email us:
+                <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
+              </li>
+              <li>Our address: Gregory Hills 2557</li>
+            </ul>
+          </div>
+          <div class="top-right">
+            <div class="office-time">
+              <i class="far fa-clock"></i><span>08:00 am - 06:00 pm</span>
+            </div>
+            <div class="social-style-one">
+              <a href="http://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.instagram.com/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="https://www.pinterest.com/"
+                ><i class="fab fa-pinterest-p"></i
+              ></a>
             </div>
           </div>
         </div>
 
         <!--Header-Upper-->
-        <div class="header-upper">
-          <div class="container clearfix">
+        <div class="header-upper bg-white">
+          <div class="container-fluid clearfix">
             <div class="header-inner d-flex align-items-center">
-              <div class="logo-outer">
+              <div class="logo-outer bg-blue py-30 px-85">
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="assets/images/logos/logo.png"
+                      src="assets/images/logos/logo.svg"
                       alt="Logo"
                       title="Logo"
-                      height="145px"
                   /></a>
                 </div>
               </div>
@@ -92,10 +100,10 @@
                 <!-- Main Menu -->
                 <nav class="main-menu navbar-expand-lg">
                   <div class="navbar-header">
-                    <div class="mobile-logo py-15">
+                    <div class="mobile-logo bg-blue p-15">
                       <a href="index.html">
                         <img
-                          src="assets/images/logos/logo.png"
+                          src="assets/images/logos/logo.svg"
                           alt="Logo"
                           title="Logo"
                         />
@@ -117,16 +125,18 @@
 
                   <div class="navbar-collapse collapse clearfix">
                     <ul class="navigation clearfix">
-                      <li class="current dropdown">
+                      <li>
                         <a href="index.html">Home</a>
                       </li>
-                      <li class="dropdown">
+                      <li class="current">
                         <a href="about.html">About Us</a>
                       </li>
-                      <li class="dropdown">
+                      <li>
                         <a href="services.html">service</a>
                       </li>
-                      <li><a href="contact.html">Contact</a></li>
+                      <li>
+                        <a href="contact.html">Contact</a>
+                      </li>
                     </ul>
                   </div>
                 </nav>
