--- a/site/index.html
+++ b/site/index.html
@@ -56,9 +56,10 @@
             <ul>
               <li>Call Us: <a href="callto:548978478">548978478</a></li>
               <li>
-                Email us: <a href="mailto:demo@example.com">demo@example.com</a>
+                Email us:
+                <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
               </li>
-              <li>Our address: 45 Dream street Austria</li>
+              <li>Our address: Gregory Hills 2557</li>
             </ul>
           </div>
           <div class="top-right">
@@ -88,7 +89,7 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="assets/images/logos/logo.png"
+                      src="assets/images/logos/logo.svg"
                       alt="Logo"
                       title="Logo"
                   /></a>
@@ -102,7 +103,7 @@
                     <div class="mobile-logo bg-blue p-15">
                       <a href="index.html">
                         <img
-                          src="assets/images/logos/logo.png"
+                          src="assets/images/logos/logo.svg"
                           alt="Logo"
                           title="Logo"
                         />
@@ -124,160 +125,14 @@
 
                   <div class="navbar-collapse collapse clearfix">
                     <ul class="navigation clearfix">
-                      <li class="current dropdown">
-                        <a href="#">Home</a>
-                        <ul>
-                          <li class="dropdown">
-                            <a href="#">MultiPage</a>
-                            <ul>
-                              <li><a href="index.html">Home One</a></li>
-                              <li><a href="index2.html">Home Two</a></li>
-                              <li><a href="index3.html">Home Three</a></li>
-                              <li><a href="index4.html">Home Four</a></li>
-                              <li><a href="index5.html">Home Five</a></li>
-                              <li><a href="index6.html">Home Six</a></li>
-                              <li><a href="index7.html">Home Seven</a></li>
-                            </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a href="#">OnePage</a>
-                            <ul>
-                              <li><a href="index-onepage.html">Home One</a></li>
-                              <li>
-                                <a href="index2-onepage.html">Home Two</a>
-                              </li>
-                              <li>
-                                <a href="index3-onepage.html">Home Three</a>
-                              </li>
-                              <li>
-                                <a href="index4-onepage.html">Home Four</a>
-                              </li>
-                              <li>
-                                <a href="index5-onepage.html">Home Five</a>
-                              </li>
-                              <li>
-                                <a href="index6-onepage.html">Home Six</a>
-                              </li>
-                              <li>
-                                <a href="index7-onepage.html">Home Seven</a>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
+                      <li class="current">
+                        <a href="index.html">Home</a>
                       </li>
-                      <li class="dropdown">
-                        <a href="#">About Us</a>
-                        <ul>
-                          <li><a href="about.html">About One</a></li>
-                          <li><a href="about-2.html">About Two</a></li>
-                          <li><a href="about-3.html">About Three</a></li>
-                          <li><a href="about-4.html">About Four</a></li>
-                          <li><a href="about-5.html">About Five</a></li>
-                          <li><a href="about-6.html">About Six</a></li>
-                          <li><a href="about-7.html">About Seven</a></li>
-                        </ul>
+                      <li>
+                        <a href="about.html">About Us</a>
                       </li>
-                      <li class="dropdown">
-                        <a href="#">service</a>
-                        <ul>
-                          <li><a href="services.html">Services One</a></li>
-                          <li><a href="services-2.html">Services Two</a></li>
-                          <li><a href="services-3.html">Services Three</a></li>
-                          <li><a href="services-4.html">Services Four</a></li>
-                          <li><a href="services-5.html">Services Five</a></li>
-                          <li><a href="services-6.html">Services Six</a></li>
-                          <li><a href="services-7.html">Services Seven</a></li>
-                          <li>
-                            <a href="service-details.html">Service Details</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#">Portfolio</a>
-                        <ul>
-                          <li><a href="portfolio.html">Portfolio</a></li>
-                          <li><a href="portfolio-2.html">Portfolio Two</a></li>
-                          <li>
-                            <a href="portfolio-3.html">Portfolio Three</a>
-                          </li>
-                          <li><a href="portfolio-4.html">Portfolio Four</a></li>
-                          <li>
-                            <a href="portfolio-details.html"
-                              >Portfolio Details</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#">pages</a>
-                        <ul>
-                          <li><a href="counter.html">Counter Page</a></li>
-                          <li class="dropdown">
-                            <a href="#">Shop Page</a>
-                            <ul>
-                              <li><a href="shop.html">Shop Page</a></li>
-                              <li>
-                                <a href="shop-details.html">Shop Details</a>
-                              </li>
-                            </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a href="#">Team Member</a>
-                            <ul>
-                              <li><a href="team-1.html">Team One</a></li>
-                              <li><a href="team-2.html">Team Two</a></li>
-                              <li><a href="team-3.html">Team Three</a></li>
-                              <li><a href="team-4.html">Team Four</a></li>
-                              <li>
-                                <a href="team-profile.html">Team Single</a>
-                              </li>
-                            </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a href="#">Pricing page</a>
-                            <ul>
-                              <li><a href="pricing.html">Pricing One</a></li>
-                              <li><a href="pricing-2.html">Pricing Two</a></li>
-                              <li>
-                                <a href="pricing-3.html">Pricing Three</a>
-                              </li>
-                              <li><a href="pricing-4.html">Pricing Four</a></li>
-                              <li><a href="pricing-5.html">Pricing Five</a></li>
-                              <li><a href="pricing-6.html">Pricing Six</a></li>
-                            </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a href="#">Testimonials page</a>
-                            <ul>
-                              <li>
-                                <a href="testimonial.html">Testimonials One</a>
-                              </li>
-                              <li>
-                                <a href="testimonial-2.html"
-                                  >Testimonials Two</a
-                                >
-                              </li>
-                              <li>
-                                <a href="testimonial-3.html"
-                                  >Testimonials Three</a
-                                >
-                              </li>
-                              <li>
-                                <a href="testimonial-4.html"
-                                  >Testimonials Four</a
-                                >
-                              </li>
-                            </ul>
-                          </li>
-                          <li><a href="404.html">404 Error</a></li>
-                        </ul>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#">blog</a>
-                        <ul>
-                          <li><a href="blog.html">Blog Standard</a></li>
-                          <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
+                      <li>
+                        <a href="services.html">service</a>
                       </li>
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -940,7 +795,7 @@
                 <div class="footer-widget about-widget">
                   <div class="footer-logo mb-35">
                     <a href="index.html"
-                      ><img src="assets/images/logos/logo.png" alt="Logo"
+                      ><img src="assets/images/logos/logo.svg" alt="Logo"
                     /></a>
                   </div>
                   <div class="text">
