--- a/site/services.html
+++ b/site/services.html
@@ -59,7 +59,9 @@
                   <li>Call Us: <a href="callto:548978478">548978478</a></li>
                   <li>
                     Email us:
-                    <a href="mailto:demo@example.com">demo@example.com</a>
+                    <a href="mailto:jdcomputers@gmail.com"
+                      >jdcomputers@gmail.com</a
+                    >
                   </li>
                 </ul>
               </div>
